--- a/scripts/R33_germfree.Rmd
+++ b/scripts/R33_germfree.Rmd
@@ -301,8 +301,8 @@ CFU <- ggplot() +
             linewidth = 0.5, alpha = 0.4) +
             
   # Layer 2: Individual data points (now bigger).
-  geom_point(data = plot_data, aes(x = Time_h, y = `CFUs_per_GramStool`, color = Treatment, shape = experiment_no ),
-             size = 3.5, alpha = 0.6) +
+  geom_point(data = plot_data, aes(x = Time_h, y = `CFUs_per_GramStool`, color = Treatment),
+             size = 2.5, alpha = 0.6) +
              
   # Layer 3: The median line (thicker and dashed).
   geom_line(data = median_data, aes(x = Time_h, y = median_CFU, color = Treatment),
@@ -329,7 +329,7 @@ CFU <- ggplot() +
     breaks = c(0, 4, 8, 24, 48, 144),
     labels = c("0", "4", "8", "24", "48", "144")
   ) +
-  scale_shape_manual(values = c("1" = 16, "2" = 18)) + # Circle and diamond 
+  #scale_shape_manual(values = c("1" = 16, "2" = 18)) + # Circle and diamond 
   # Use a clean theme and add informative titles and labels.
   theme_bw(base_size = 14) +
   labs(
@@ -407,50 +407,47 @@ ggplot(cfu_24h_data, aes(x = Treatment, y = log10_CFUs_per_GramStool)) +
 # median VS mean   
 
 ```{r}
-# one figure where I only plot the median and the mean line
-summary_data <- bind_rows(
-  gavage_median_data %>% mutate(Metric = 'summarized with median') %>% rename(CFU = median_CFU),
-  gavage_mean_data %>% mutate(Metric = 'summarized with mean')%>% rename(CFU = Mean_CFU)
-)
-```
-
-
-```{r}
-ggplot(summary_data, aes(x = Time_h, y = CFU, color = Treatment, linetype = Metric)) +
-  # Draw lines connecting the points. The linetype (solid vs. dashed) will distinguish mean from median.
-  geom_line(linewidth = 1.2, alpha = 0.8) +
-  # Add points to show the exact measurement at each time point.
-  geom_point(size = 3.5, alpha = 0.8) +
-  
-  # Set the Y axis to a log10 scale and format the labels as 10^x.
-  scale_y_log10(
-    breaks = trans_breaks("log10", function(x) 10^x),
-    labels = trans_format("log10", math_format(10^.x)),
-    # We add a limit of 1 so the zero values are included at the baseline.
-    limits = c(1, NA)
-  ) +
-  
-  # Use a clean theme and add informative titles and labels.
-  theme_bw(base_size = 14) +
-  facet_grid(~ Metric) +
-  labs(
-    title = "Mean vs. Median E. faecalis Colonization",
-    subtitle = "Comparing Sucrose vs. Regular Water Groups",
-    x = "Time Post-Gavage (Hours)",
-    y = "CFU / gram of feces",
-    color = "Treatment Group",
-    linetype = "Metric"
-  ) +
-  
-  # Customize the plot's appearance.
-  theme(
-    plot.title = element_text(face = "bold", hjust = 0.5),
-    plot.subtitle = element_text(hjust = 0.5),
-    legend.position = "right",
-    legend.title = element_text(face = "bold")
-  )
-
-ggsave('../data/R33_gm_summaries_2.jpg', width = 10, height = 5)
+# # one figure where I only plot the median and the mean line
+# summary_data <- bind_rows(
+#   gavage_median_data %>% mutate(Metric = 'summarized with median') %>% rename(CFU = median_CFU),
+#   gavage_mean_data %>% mutate(Metric = 'summarized with mean')%>% rename(CFU = Mean_CFU)
+# )
+# 
+# ggplot(summary_data, aes(x = Time_h, y = CFU, color = Treatment, linetype = Metric)) +
+#   # Draw lines connecting the points. The linetype (solid vs. dashed) will distinguish mean from median.
+#   geom_line(linewidth = 1.2, alpha = 0.8) +
+#   # Add points to show the exact measurement at each time point.
+#   geom_point(size = 3.5, alpha = 0.8) +
+#   
+#   # Set the Y axis to a log10 scale and format the labels as 10^x.
+#   scale_y_log10(
+#     breaks = trans_breaks("log10", function(x) 10^x),
+#     labels = trans_format("log10", math_format(10^.x)),
+#     # We add a limit of 1 so the zero values are included at the baseline.
+#     limits = c(1, NA)
+#   ) +
+#   
+#   # Use a clean theme and add informative titles and labels.
+#   theme_bw(base_size = 14) +
+#   facet_grid(~ Metric) +
+#   labs(
+#     title = "Mean vs. Median E. faecalis Colonization",
+#     subtitle = "Comparing Sucrose vs. Regular Water Groups",
+#     x = "Time Post-Gavage (Hours)",
+#     y = "CFU / gram of feces",
+#     color = "Treatment Group",
+#     linetype = "Metric"
+#   ) +
+#   
+#   # Customize the plot's appearance.
+#   theme(
+#     plot.title = element_text(face = "bold", hjust = 0.5),
+#     plot.subtitle = element_text(hjust = 0.5),
+#     legend.position = "right",
+#     legend.title = element_text(face = "bold")
+#   )
+# 
+# ggsave('../data/R33_gm_summaries_2.jpg', width = 10, height = 5)
 ```
 
 # the AUC test    
@@ -518,7 +515,7 @@ p_label <- paste0("p = ", format(p_value, digits = 2, nsmall = 2), "*")
 # To visualize the result, a simple boxplot of the AUC values is helpful.
 auc_plot <- ggplot(auc_results, aes(x = Treatment, y = auc_value, fill = Treatment)) +
   geom_boxplot(alpha = 0.7,  outlier.shape = NA) +
-  geom_jitter(width = 0.35, size = 3, aes(shape = experiment_no)) + 
+  geom_jitter(width = 0.35, size = 3) + 
   # Manually add the p-value annotation.
   annotate(
     "text",
@@ -533,12 +530,12 @@ auc_plot <- ggplot(auc_results, aes(x = Treatment, y = auc_value, fill = Treatme
     x = 1, xend = 2, y = max(auc_results$auc_value) + 30, yend = max(auc_results$auc_value) + 30,
     linewidth = 0.8
   ) +
-  scale_shape_manual(values = c("1" = 16, "2" = 18)) + # Circle and diamond 
+  #scale_shape_manual(values = c("1" = 16, "2" = 18)) + # Circle and diamond 
   labs(
     #title = "Comparison of Total Bacterial Load (AUC)",
     x = "",
     y = "Area Under Curve\nlog10(CFU/g) * hours",
-    shape = "Experiment", # This will be the title for the shape legend.
+    #shape = "Experiment", # This will be the title for the shape legend.
     caption = "*p-value from two-way ANOVA adjusting for experiment number"
   ) +
   theme_classic(base_size = 11) +
